fix: popup width and overflow-x

--- a/src/features/popup/popup.scss
+++ b/src/features/popup/popup.scss
@@ -26,7 +26,9 @@
     &__inner {
         position: relative;
         padding: 48px 48px 38px;
+        width: 100%;
         max-width: 546px;
+        overflow-x: hidden;
         overflow-y: auto;
         background-color: var(--base_200);
         border-radius: 0 8px 8px 8px;
